user input name

--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,19 @@ h1{
   text-align: center;
   font-size: xx-large;
 }
-
+.error-output {
+  margin-left: 60em;
+  font-size: 12px;
+  font-style: italic;
+  color: red;
+}
 img{
   display: block;
   margin: 0 auto;
   width: 25%;
+}
+input{
+  display: block;
+  margin: 0 auto;
+  width: 15%;
 }
